--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./assets/images/melon.JPG" class="d-block w-100" alt="...">
+      <img src="./assets/images/melon.JPG" class="d-block w-100" alt="melon">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="./assets/images/miel.jpg" class="d-block w-100" alt="miel">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="./assets/images/maiz.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
