--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <!--****************TERMINA NAVBAR**********************-->
 
   <!--****************INICIA CARROUSEL**********************-->
+  <div class="container">
   <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -70,7 +71,7 @@
       <img src="./assets/images/miel.jpg" class="d-block w-100" alt="miel">
     </div>
     <div class="carousel-item">
-      <img src="./assets/images/maiz.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/images/maiz.jpg" class="d-block w-100" alt="maiz">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -81,6 +82,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>
 </div>
 <!--****************CIERRA CARROUSEL**********************-->
     
