--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 </div>
 </div>
 <!--****************CIERRA CARROUSEL**********************-->
-    
+<div class="container">
+  <h1>Gerardo <span class="badge bg-secondary">New</span></h1>
+
+</div>
     <!-- End Example Code -->
   </body>
 </html>
