--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Example Code -->
     <!--****************INICIA NAVBAR**********************-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar fixed-top bg-body-tertiary">
     <div class="container-fluid">
     <a class="navbar-brand" href="#">
     <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="L" width="30" height="24" class="d-inline-block align-text-top">
@@ -26,29 +26,29 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Productos</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Menu
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Frutas</a></li>
+              <li><a class="dropdown-item" href="#">Semillas</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Alimentos enlatados</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link disabled">Prox Productos</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-success" type="submit">Buscar Producto</button>
         </form>
       </div>
     </div>
@@ -88,6 +88,9 @@
 <div class="container">
   <h1>Gerardo <span class="badge bg-secondary">New</span></h1>
 
+</div>
+<div class="container">
+  <img src="./assets/images/chamarra.jpg" alt="foto">
 </div>
     <!-- End Example Code -->
   </body>
