--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <!-- Example Code -->
     <!--****************INICIA NAVBAR**********************-->
-    <nav class="navbar fixed-top bg-body-tertiary">
-    <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="L" width="30" height="24" class="d-inline-block align-text-top">
+    <nav class="navbar sticky-top bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="L" width="30" height="24" class="d-inline-block align-text-top">
     Bootstrap
   </a>
 
