--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Example Code -->
     <!--****************INICIA NAVBAR**********************-->
-    <nav class="navbar sticky-top bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="L" width="30" height="24" class="d-inline-block align-text-top">
