--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="L" width="30" height="24" class="d-inline-block align-text-top">
-    Bootstrap
+    Temporada
   </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +86,7 @@
 </div>
 <!--****************CIERRA CARROUSEL**********************-->
 <div class="container">
-  <h1>Gerardo <span class="badge bg-secondary">New</span></h1>
+  <h1>Promociones <span class="badge bg-secondary">New</span></h1>
 
 </div>
 <div class="container">
