--- a/index.html
+++ b/index.html
@@ -85,13 +85,37 @@
 </div>
 </div>
 <!--****************CIERRA CARROUSEL**********************-->
+<!--INICIA DIV PROMOCIONES-->
 <div class="container">
   <h1>Promociones <span class="badge bg-secondary">New</span></h1>
 
 </div>
+<!--TERMINA DIV PROMOCIONES-->
+
+<!--INICIA DIV FOTO-->
 <div class="container">
   <img src="./assets/images/chamarra.jpg" alt="foto">
 </div>
+<!--TERMINA DIV FOTO-->
+
+<!--INICIA DIV MENSAJES-->
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Mensaje </h1>
+    </div>
+    <div class="col-md-6">
+      <h1>Mensaje </h1>
+      <img src="./assets/images/bote de miel.jpg" alt="foto de miel">
+    </div>
+
+  </div>
+  
+
+</div>
+<!--TERMINA DIV MENSAJES-->
+
+
     <!-- End Example Code -->
   </body>
 </html>
