--- a/index.html
+++ b/index.html
@@ -99,19 +99,17 @@
 <!--TERMINA DIV FOTO-->
 
 <!--INICIA DIV MENSAJES-->
-<div class="container">
+<div class="container" id="miel">
   <div class="row">
     <div class="col-md-6">
       <h1>Mensaje </h1>
     </div>
     <div class="col-md-6">
-      <h1>Mensaje </h1>
+      <h1>Bote de miel </h1>
       <img src="./assets/images/bote de miel.jpg" alt="foto de miel">
     </div>
 
   </div>
-  
-
 </div>
 <!--TERMINA DIV MENSAJES-->
 
