--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Temporada México</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="./assets/css/index.css">
   </head>
   <body class="p-3 m-0 border-0 bd-example">
 
@@ -94,7 +95,7 @@
 
 <!--INICIA DIV FOTO-->
 <div class="container">
-  <img src="./assets/images/chamarra.jpg" alt="foto">
+  <img src="./assets/images/chamarra.jpg" alt="foto" width="100%">
 </div>
 <!--TERMINA DIV FOTO-->
 
@@ -103,10 +104,11 @@
   <div class="row">
     <div class="col-md-6">
       <h1>Mensaje </h1>
+      <p>Miel de la ciudad de Calakmul, Campeche</p>
     </div>
     <div class="col-md-6">
       <h1>Bote de miel </h1>
-      <img src="./assets/images/bote de miel.jpg" alt="foto de miel">
+      <img src="./assets/images/bote de miel.jpg" alt="foto de miel" width="100%">
     </div>
 
   </div>
