ejemplo de tarjetas de productos

--- a/index.html
+++ b/index.html
@@ -103,12 +103,84 @@
 <div class="container" id="miel">
   <div class="row">
     <div class="col-md-6">
-      <h1>Mensaje </h1>
+      <h1>Deliciosa miel </h1>
       <p>Miel de la ciudad de Calakmul, Campeche</p>
     </div>
     <div class="col-md-6">
       <h1>Bote de miel </h1>
       <img src="./assets/images/bote de miel.jpg" alt="foto de miel" width="100%">
+    </div>
+
+  </div>
+</div>
+
+<div class="container" id="cafe">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Granos de cafe </h1>
+      <p>Cafe de la ciudad de , Chiapas, México</p>
+    </div>
+    <div class="col-md-6">
+      <h1>Cafe por bolsas de 500 gramos </h1>
+      <img src="./assets/images/granosdecafe.png" alt="granos de cafe" width="100%">
+    </div>
+
+  </div>
+</div>
+
+<div class="container" id="porcino">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Lechones </h1>
+      <p>Porcinos de granjas Cunduacan, Tabasco, México</p>
+    </div>
+    <div class="col-md-6">
+      <h1>Cafe por bolsas de 500 gramos </h1>
+      <img src="./assets/images/porcinopequeno.webp" alt="porcino" width="100%">
+    </div>
+
+  </div>
+</div>
+
+<div class="container" id="bufalo">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Carne de bufalo </h1>
+      <p>Carne de bufalo , Cunduacan, Tabasco</p>
+    </div>
+    <div class="col-md-6">
+      <h1>Carne por peso, a partir de 250 gramos </h1>
+      <img src="./assets/images/bufalo.png" alt="granos de cafe" width="100%">
+      <img src="./assets/images/carnes.jpg" alt="carnes parrilla" width="100%">
+    </div>
+
+  </div>
+</div>
+
+<div class="container" id="borregos">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Carne de borrego </h1>
+      <p>Carne de bufalo de granjas de Cunduacan, Tabasco, México</p>
+    </div>
+    <div class="col-md-6">
+      <h1>Carne por peso, a partir de 250 gramos </h1>
+      <img src="./assets/images/borregos.jpg" alt="borregos" width="100%">
+      
+    </div>
+
+  </div>
+</div>
+
+<div class="container" id="pollos">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Pollos criados con maiz </h1>
+      <p>Pollos en pie de granjas de Cunduacan, Tabasco, México</p>
+    </div>
+    <div class="col-md-6">
+      <h1>Pollos por piezas </h1>
+      <img src="./assets/images/pollos.png" alt="granos de cafe" width="100%">
     </div>
 
   </div>
