--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div class="row">
     <div class="col-md-6">
       <h1>Carne de bufalo </h1>
-      <p>Carne de bufalo , Cunduacan, Tabasco</p>
+      <p>Carne de bufalo de ranchos de Huimanguillo, Tabasco</p>
     </div>
     <div class="col-md-6">
       <h1>Carne por peso, a partir de 250 gramos </h1>
@@ -161,7 +161,7 @@
   <div class="row">
     <div class="col-md-6">
       <h1>Carne de borrego </h1>
-      <p>Carne de bufalo de granjas de Cunduacan, Tabasco, México</p>
+      <p>Carne de borrego de ranchos de Cunduacan, Tabasco, México</p>
     </div>
     <div class="col-md-6">
       <h1>Carne por peso, a partir de 250 gramos </h1>
