--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     </div>
   </nav>
   <!--****************TERMINA NAVBAR**********************-->
+  
+  <div class="titulo">
+    <h1>Bienvenido a "La Temporada"</h1>
+    <p>¡Una temporada ... adelante!</p>
+  </div>
 
   <!--****************INICIA CARROUSEL**********************-->
   <div class="container">
@@ -95,7 +100,8 @@
 
 <!--INICIA DIV FOTO-->
 <div class="container">
-  <img src="./assets/images/chamarra.jpg" alt="foto" width="100%">
+  <!--<img src="./assets/images/chamarra.jpg" alt="foto" width="100%">-->
+  
 </div>
 <!--TERMINA DIV FOTO-->
 
