aplicacion de correcciones en el navbar

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./assets/css/index.css">
   </head>
+
   <body class="p-3 m-0 border-0 bd-example">
 
     <!-- Example Code -->
     <!--****************INICIA NAVBAR**********************-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="L" width="30" height="24" class="d-inline-block align-text-top">
-    Temporada
+        <a class="navbar-brand" href="index.html">
+          <img src="/assets/images/logo_temporada.png" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
+    Temporada MX
   </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,8 +49,8 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar Producto</button>
+          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
       </div>
     </div>
@@ -57,7 +58,7 @@
   <!--****************TERMINA NAVBAR**********************-->
   
   <div class="titulo">
-    <h1>Bienvenido a "La Temporada"</h1>
+    <h1>Bienvenido a "La Temporada MX"</h1>
     <p>¡Una temporada ... adelante!</p>
   </div>
 
@@ -91,6 +92,7 @@
 </div>
 </div>
 <!--****************CIERRA CARROUSEL**********************-->
+
 <!--INICIA DIV PROMOCIONES-->
 <div class="container">
   <h1>Promociones <span class="badge bg-secondary">New</span></h1>
