--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!--****************INICIA NAVBAR**********************-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="www.latemporada.com.mx">
           <img src="/assets/images/logo_temporada.png" alt="logo" width="40" height="40" class="d-inline-block align-text-top">
-    Temporada MX
+    La Temporada MX
   </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,39 +57,60 @@
   </nav>
   <!--****************TERMINA NAVBAR**********************-->
   
-  <div class="titulo">
+  <!--<div class="titulo">
     <h1>Bienvenido a "La Temporada MX"</h1>
     <p>¡Una temporada ... adelante!</p>
   </div>
+-->
 
   <!--****************INICIA CARROUSEL**********************-->
   <div class="container">
-  <div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./assets/images/melon.JPG" class="d-block w-100" alt="melon">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/assets/images/maiz3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Etiqueta de la primera diapositiva</h5>
+            <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/melon2.jpg" class="d-block w-100" alt="melon">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Etiqueta de la segunda diapositiva</h5>
+            <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/miel2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Etiqueta de la tercera diapositiva</h5>
+            <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/calabaza2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Etiqueta de la tercera diapositiva</h5>
+            <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
     </div>
-    <div class="carousel-item">
-      <img src="./assets/images/miel.jpg" class="d-block w-100" alt="miel">
-    </div>
-    <div class="carousel-item">
-      <img src="./assets/images/maiz.jpg" class="d-block w-100" alt="maiz">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 </div>
 <!--****************CIERRA CARROUSEL**********************-->
 
