correccion titulo de bienvenida

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   </nav>
   <!--****************TERMINA NAVBAR**********************-->
   
-  <!--<div class="titulo">
-    <h1>Bienvenido a "La Temporada MX"</h1>
+  <div class="titulo">
+   <!-- <h1>Bienvenido a "La Temporada MX"</h1>-->
     <p>¡Una temporada ... adelante!</p>
   </div>
--->
+
 
   <!--****************INICIA CARROUSEL**********************-->
   <div class="container">
