insercion de un mapa en la pagina principal

--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
 </div>
 <!--TERMINA DIV MENSAJES-->
 
+<!--INICIA MAPA-->
+<div class="container" id="mapa">
+  <h4>Encuentranos en:</h4>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2254.796774773347!2d-93.29293677681852!3d18.113124201855054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1689000240761!5m2!1ses-419!2smx" width="1200" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</div>
+
 
     <!-- End Example Code -->
   </body>
