aplicacion de letreto en desplazamiento

--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
         <div class="carousel-item active">
           <img src="/assets/images/maiz3.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Etiqueta de la primera diapositiva</h5>
-            <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+            <h5>Maiz Blanco</h5>
+            <p>$ 10.00 pesos por 1 kg</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/assets/images/melon2.jpg" class="d-block w-100" alt="melon">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Etiqueta de la segunda diapositiva</h5>
-            <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+            <h5>Melon</h5>
+            <p>$ 20.00 pesos pieza.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/assets/images/miel2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Etiqueta de la tercera diapositiva</h5>
-            <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+            <h5>Miel de abeja</h5>
+            <p>$ 160.00 pesos el litro</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/assets/images/calabaza2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Etiqueta de la tercera diapositiva</h5>
-            <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+            <h5>Calabacita</h5>
+            <p>$ 5.00 pesos la pieza</p>
           </div>
         </div>
       </div>
@@ -115,8 +115,11 @@
 <!--****************CIERRA CARROUSEL**********************-->
 
 <!--INICIA DIV PROMOCIONES-->
-<div class="container">
-  <h1>Promociones <span class="badge bg-secondary">New</span></h1>
+<div class="container" id="promociones">
+  <h1>Promociones <span class="badge bg-secondary"></span></h1>
+  <br>
+  <h1><marquee behavior="scroll" direction="left">Limon $ 150.00 tara de mas de 25kg -- Maiz$ 10.00  1kg -- Naranja $150.00 arpilla de 100 piezas</marquee></h1>
+  <h2><marquee behavior="scroll" direction="left">Envie un WhatsApp al (914) 1282221</marquee></h2>
 
 </div>
 <!--TERMINA DIV PROMOCIONES-->
