ajuste de posicion de el navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Example Code -->
     <!--****************INICIA NAVBAR**********************-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="www.latemporada.com.mx">
           <img src="/assets/images/logo_temporada.png" alt="logo" width="40" height="40" class="d-inline-block align-text-top">
     La Temporada MX
